

# A plus B
set(APlusB_SRC APlusB.cpp)
add_executable(a_plus_b ${APlusB_SRC})
#target_link_libraries(a_plus_b m)

# ğš–ğšŠğš¡_ğš™ğšŠğš’ğš›ğš ğš’ğšœğš_ğš™ğš›ğš˜ğšğšğšŒğš
set(max_pairwise_product_SRC max_pairwise_product.cpp)
add_executable(max_pairwise_product ${max_pairwise_product_SRC})

# cpp_stress_test
set(cpp_stress_test_SRC cpp_stress_test.cpp)
add_executable(cpp_stress_test ${cpp_stress_test_SRC})

# fibrecurs
set(FibRecurs_SRC FibRecurs.cpp)
add_executable(FibRecurs ${FibRecurs_SRC})

# GCD.cpp
set(GCD_SRC GCD.cpp)
add_executable(GCD ${GCD_SRC})
